Reconformed to new spec, and added test cases for bank service
