# api/Yubico-OpenAPI3-Passkey-HighAssurance-Schema-v1.yaml
@@ -25,210 +25,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/APIStatus"
-  /v1/attestation/options:
-    post:
-      summary: Request to register a new public-key credential
-      operationId: ServerPublicKeyCredentialCreationOptionsRequest
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AttestationOptionsRequest"
-            examples:
-              Default:
-                $ref: "#/components/examples/ServerPublicKeyCredentialCreationOptionsRequest-Default"
-              Optional:
-                $ref: "#/components/examples/ServerPublicKeyCredentialCreationOptionsRequest-Optional"
-      responses:
-        "200":
-          description: Attestation options response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AttestationOptionsResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /v1/attestation/result:
-    post:
-      summary: Send public-key attestation response
-      operationId: ServerAuthenticatorAttestationResponse
-      requestBody:
-        description: Send authenticator attestation response as a ServerPublicKeyCredential object
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AttestationResultRequest"
-      responses:
-        "201":
-          description: New Passkey created for user
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AttestationResultResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /v1/assertion/options:
-    post:
-      summary: Request public-key credential authentication options for user
-      operationId: ServerPublicKeyCredentialGetOptionsRequest
-      requestBody:
-        description: Request credential options for user
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AssertionOptionsRequest"
-      responses:
-        "200":
-          description: Assertion options response from server
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AssertionOptionsResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /v1/assertion/result:
-    post:
-      summary: Send public-key assertion response
-      operationId: ServerAuthenticatorAssertionResponse
-      requestBody:
-        description: Send authenticator assertion response to server as a ServerAuthenticatorAssertionResponse object
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/AssertionResultRequest"
-      responses:
-        "200":
-          description: Assertion result response from server
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/AssertionResultResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"        
-  /v1/user:
-    delete:
-      summary: Delete user account
-      operationId: UserDeleteRequest
-      requestBody:
-        description: Delete user from server
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserDeleteRequest"
-      responses:
-        "200":
-          description: User successfully deleted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserDeleteResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /v1/user/profile/{userName}:
-    get:
-      summary: Get user profile
-      operationId: UserProfile
-      parameters:
-        - in: path
-          name: userName
-          schema:
-            type: string
-          required: true
-          description: userName for fetching user profile
-      responses:
-        "200":
-          description: User profile response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserProfileResponse"
-  /v1/user/credentials/{userName}:
-    get:
-      summary: Get user credentials by userName
-      operationId: UserCredentialsRequest
-      parameters:
-        - in: path
-          name: userName
-          schema:
-            type: string
-          required: true
-          description: Username used to query for credentials
-      responses:
-        "200":
-          description: User credentials response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserCredentialsResponse"
-  /v1/user/credentials:
-    put:
-      summary: Update a user credential
-      description: Update the nickName of the user credential
-      operationId: UserCredentialUpdateRequest
-      requestBody:
-        description: Send updated nickName of user credential by id
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserCredentialUpdateRequest"
-      responses:
-        "200":
-          description: A successful user credential update response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserCredentialUpdateResponse"
-    delete:
-      summary: Delete a user credential
-      description: Deletes a user credential by id
-      operationId: UserCredentialDeleteRequest
-      requestBody:
-        description: Delete user credential by specifying the credential id
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserCredentialDeleteRequest"
-      responses:
-        "200":
-          description: A successful user credential deleted
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UserCredentialDeleteResponse"
-        "400":
-          description: Failed request response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
   /v1/accounts:
+    get:
+      summary: API to list all accounts that belong to a user
+      operationId: GetAccountsRequest
+      responses:
+        "200":
+          description: Successfully retrieved all user accounts
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AccountDetailListResponse"
     post:
       summary: Admin API to create a new bank account for user
       operationId: CreateAccountRequest
@@ -238,7 +45,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/CreateAccountRequest"
+              type: object
       responses:
         "200":
           description: Successful bank account creation
@@ -303,6 +110,13 @@ paths:
     post:
       summary: Create a new transaction
       operationId: TransactionCreate
+      parameters:
+        - in: path
+          name: accountId
+          schema:
+            type: integer
+          required: true
+          description: ID of bank account to return
       requestBody:
         description: Create a transaction
         required: true
@@ -350,6 +164,13 @@ paths:
     put:
       summary: Update/Set advanced protection status for account
       operationId: UpdateAdvancedProtectionStatus
+      parameters:
+        - in: path
+          name: accountId
+          schema:
+            type: integer
+          required: true
+          description: ID of bank account to return
       requestBody:
         description: Update advanced protection status for account
         required: true
@@ -401,6 +222,13 @@ components:
       $ref: "#/components/schemas/Account"
     AccountDetailsResponse:
       $ref: "#/components/schemas/Account"
+    AccountDetailListResponse:
+      type: object
+      properties:
+        accounts:
+          type: array
+          items:
+            $ref: "#/components/schemas/Account"
     AccountTransactionListResponse:
       type: object
       properties:
@@ -419,7 +247,7 @@ components:
           example: transfer
           enum:
             - deposit
-            - withdrawl
+            - withdrawal
             - transfer
         amount:
           type: number
@@ -631,172 +459,10 @@ components:
       type: object
       properties:
         status:
-          type: string
-          example: created
-    AssertionOptionsRequest:
-      type: object
-      properties:
-        userName:
-          type: string
-          example: janedoe@example.com
-    AssertionOptionsResponse:
-      type: object
-      properties:
-        requestId:
-          type: string
-          example: B-J4odOi9vcV-4TN_gpokEb1f1EI...
-        publicKey:
-          type: object
-          properties:
-            challenge:
-              type: string
-              example: m7xl_TkTcCe0WcXI2M-4ro9vJAuwcj4m
-            timeout:
-              type: integer
-              example: 20000
-            rpId:
-              type: string
-              example: example.com
-            allowCredentials:
-              type: array
-              items:
-                properties:
-                  id:
-                    type: string
-                    example: opQf1WmYAa5aupUKJIQp
-                  type:
-                    type: string
-                    example: public-key
-                    default: public-key
-            userVerification:
-              type: string
-              example: preferred
-              default: preferred
-              enum:
-                - required
-                - preferred
-                - discouraged
-        errorMessage:
-          type: string
-          example: ""
-    AssertionResultRequest:
-      type: object
-      properties:
-        requestId:
-          type: string
-          example: B-J4odOi9vcV-4TN_gpokEb1f1EI...
-        assertionResult:
-          type: object
-          properties:
-            id:
-              type: string
-              example: LFdoCFJTyB82ZzSJUHc-c72yraRc_1mPvG
-            response:
-              type: object
-              properties:
-                authenticatorData:
-                  type: string
-                  example: SZYN5Gh0NBcPZHZgW4_krrmihjzzuoMdl2MBAAAAAA...
-                signature:
-                  type: string
-                  example: ME8fLjd5y6TUOLWt5l9DQIhANiYig9newAJZYTzG1i5lwP
-                userHandle:
-                  type: string
-                  example: ""
-                clientDataJSON:
-                  type: string
-                  example: eyJjaGFTBrTmM4uIjoiaHR0cDovL2xvY2FsF1dGhuLmdldCJ9...
-            type:
-              type: string
-              example: public-key
-              default: public-key
-            clientExtensionResults:
-              type: object
-              example: {}
-    AssertionResultResponse:
-      type: object
-      properties:
-        status:
-          type: string
-          example: ok
-    User:
-      type: object
-      properties:
-        id:
-          type: integer
-          example: 34545132
-        userName:
-          type: string
-          example: janedoe@example.com
-        displayName:
-          type: string
-          example: Jane Doe
-        lastLoginDate:
-          type: string
-          format: date-time
-          example: 2023-01-09T13:44:02Z
-    UserProfileResponse:
-      $ref: "#/components/schemas/User"
-    UserDeleteRequest:
-      type: object
-      properties:
-        userName:
-          type: string
-          example: janedoe@example.com
-    UserDeleteResponse:
-      type: object
-      properties:
-        result:
-          type: string
-          example: deleted
-    UserCredential:
-      type: object
-      properties:
-        id:
-          type: string
-          example: DthUeofXNtlMevkt_M7aiD3cm70...
-        type:
-          type: string
-          example: public-key
-        nickName:
-          type: string
-          example: YubiKey 5Ci
-        registrationTime:
-          type: string
-          format: date-time
-          example: 2022-07-21T17:32:28Z
-        lastUsedTime:
-          type: string
-          format: date-time
-          example: 2022-07-21T18:15:06Z
-        icon:
-          type: string
-          example: data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAfCAYAAACGVs+MAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAHYYAAB2GAV2iE4EAAAbNSURBVFhHpVd7TNV1FD/3d59weQSIgS9AQAXcFLAQZi9fpeVz1tY/WTZr5Wxpc7W5knLa5jI3Z85srS2nM2sjtWwZS7IUH4H4xCnEQx4DAZF74V7us885v9/lInBvVJ/B4Pv9nu/5nu/5nvM556fzA/Qv0Hb/IrX3VFKPo45cnm4inUIWYwLFRmZQUuwjFG/N1iRHh1EZ0NRVRudqt1Bd+2nSKyS/Ohys0+lk3e/3kQ9qvD4ZUta4VVSUuY0eipyiThAfocoORVgDuuw3qKRiAd3rbcEtjTjYIof6WaHsCmzVPWCMx+cgh8tLqWMKaMWsUjLqo2RtJIQ0oOzmerpQu4esZgsONkGxH7d0kdvTT17s4OMU7VI8ZhjgGaM+Aq9iENu8Pif1udz07MwvKWf8GlVoCEY04PC5WdTaXYFbR8vNvL5+3Kgfb5xNMya9RamJiynaMlGTVtFlr6ba9u+pqnEX4uMuRRgjSYEhrN7utFFe6lqal7Nfkw5imAGHynPpbk8VmY0xstnptlFCVCYtzTuBN83QpMLjTtevdPzSUnJ7e8mkjxZ39fXbKDfldZqbvU+TUgGnBVF6fQ2iPHg4W16UWUwvzbk16sMZE+Pn0pvz7JSeuAyes8lcpCmaKuo/p+qWr2UcwIAHWrvP0YEzhXAtLAbssHhp7iGamvyijP8ryqrXUWX9XoowxyAufNBrp43POBFXZlkf8MDRiqcpyowAwpuz2x+fWvz/Dtde9smszygtcR6C1wbdzBl6Olq5WNYY4oGathJMrkTEx0jARSHAVs+5rYkQNXb+QgfPLsQ6gXyInsreQfmpm7RVFYfL86n1fiUOkYvShkUPxvbukzoy6K1ihM1ho3XzW6EvSfXA+dpiWGaWd+doXzLzmGwKYFLCAsRAlPBAhMlCFXU7tBUVPr8HgVcJHWq+F00plr+DMTdrP4zvxY11kNMhxT+SeTGg+d4V5LQJityUGJNB8VFZsjgYBZM/II/XCTkj0qyDOpF2AVQ17CIjUp/DnT1UkL5F5gdj+sS1wg1gE3gigm60fCXzSnPXbyAPbIXv+IDpE16ThaHIS9skyhlmME5F3cfqAKhq2C0E5PH1gYaXaLPDkZG0HDJOnKWHp51I0z5SOux8e1WAuZzdHQrTkp8TmjXoI+la0wGZszubqbO3ifQ6A/W7vVSYsV3mR0JKwkKc4WHiBkmR8I3CCgI87oOL4qzT5P+RUJBejEOgAPK8hYPzatM+eITp2IO9yTQmeromPRxx1qxAcsile/ubSeEbcWQGYECghcLY2HyKjogjH25hMpjpUv1Ougli4eh2eRw0O32bJjkyuCgNzg0vzlYMSiSs0uoo4MG7hMOjCEaX1yFE0nSvjBzuTnEpK86Z8IoqFAIubw8kg9ArEaREWSZI+jH4Xbp6g9E9EnJT3oaRzDN+MUJBQDHn56a8oUmEBusOxBs/N5+tJEbPkAFDj8UGvOs/IWvcSglGBhvS7/FTYfpWGYdDY8fPAxWSA35sTC4p4+Lm4AaqIoPeQtfufK6Jh0ZhxlbsUXOSmXNifD5ZTAkyDofbbcclxnA8WNAqxCbRNykhXxQpaDw67fXUYbsiG0Khtv2oeIvh8rhQMYOcEAqXG/eI+zngOc5yxr8q82IAM1c/FLFOplqu5eFQXrMZzGcVCjYbLWG5I4BT1euRrlbxtNOtMitDDEhLXIIynAAvuOEWE3X3NdAft94VgaG42XIQt0ZX6PeCE/qQFe9rK6Hx7YU50KvH7fW4fS+q7KKBJxsggBX5pSAGh1jIrVh5zQ6w3RfaahBXm/aCbCZTjCUFUTyWZqW9p62MjJPXVqOrPgMO4Nv74Gkf+owftNVBDQnjFJqHSw17pXvhWW5KZqe/Q49N/USTCAVWoQXFIHBHXXe3FPrUDsuGDmtF/hHKTHpekxhiAOPI+SJq6S6HF4I9YWzkBJTo46iUMzWp8Pir/RiduLxKYsSksV8vLlOQvhGX2YlR0OBhBjC+u/gEcvY0ApK7Yk41NxjPSQnWFHTF66UrjgevB8Cu5a+l2vYSRPtuVDo73hhdMSHnUX7tTjsVZGxAl/WptiOIEQ1gnL29mX6/tR1tmlkYj8W4X+CSjWcUDGY1NpS/C7hSKqiMLM/l2QmSWZ73Ddz+gio8BCENYPQ46qnkzwXUbqvBkxjUQsWfZFgbuo3rAf+wN7jOO90+ynx4Pi3L+0nYL1SchDUgAP4gPV/7Id1q+1HShmuGkIqWRPgyxMFqP8HfjTnjXwY5bQfbJct6OIzKgMHotF/He1egsaxHSqG6wfdmQ5x8NyTFFqBcp2iSowHR3yk5+36hF7vXAAAAAElFTkSuQmCC
-    UserCredentialsResponse:
-      type: object
-      properties:
-        credentials:
-          type: array
-          items:
-            $ref: "#/components/schemas/UserCredential"
-    UserCredentialUpdateRequest:
-      type: object
-      properties:
-        id:
-          type: string
-          example: DthUeofXNtlMevkt_M7aiD3cm70...
-        nickName:
-          type: string
-          example: YubiKey 5Ci home
-    UserCredentialUpdateResponse:
-      $ref: "#/components/schemas/UserCredential"
-    UserCredentialDeleteRequest:
-      type: object
-      properties:
-        id:
-          type: string
-          example: DthUeofXNtlMevkt_M7aiD3cm70...
-    UserCredentialDeleteResponse:
+          type: boolean
+          example: true
+    UpdateAdvancedProtectionStatusResponse:
+      $ref: "#/components/schemas/AdvancedProtection"
       type: object
       properties:
         result:
