# examples/high_assurance/bank_app/src/main/java/com/yubicolabs/bank_app/models/api/AccountResponse.java
@@ -1,21 +1,26 @@
 package com.yubicolabs.bank_app.models.api;
 
+import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
 import java.math.BigDecimal;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
 import javax.validation.Valid;
+import javax.validation.constraints.*;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.Builder;
 
+import java.util.*;
 import javax.annotation.Generated;
 
 /**
- * AccountDetailsResponse
+ * Account
  */
-
 @Builder
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-27T11:32:42.412827-05:00[America/Chicago]")
-public class AccountDetailsResponse {
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-06-30T13:35:17.173429-05:00[America/Chicago]")
+public class AccountResponse {
 
   @JsonProperty("accountId")
   private Integer accountId;
@@ -23,7 +28,10 @@ public class AccountDetailsResponse {
   @JsonProperty("balance")
   private BigDecimal balance;
 
-  public AccountDetailsResponse accountId(Integer accountId) {
+  @JsonProperty("advancedProtection")
+  private Boolean advancedProtection;
+
+  public AccountResponse accountId(Integer accountId) {
     this.accountId = accountId;
     return this;
   }
@@ -43,7 +51,7 @@ public class AccountDetailsResponse {
     this.accountId = accountId;
   }
 
-  public AccountDetailsResponse balance(BigDecimal balance) {
+  public AccountResponse balance(BigDecimal balance) {
     this.balance = balance;
     return this;
   }
@@ -63,6 +71,26 @@ public class AccountDetailsResponse {
     this.balance = balance;
   }
 
+  public AccountResponse advancedProtection(Boolean advancedProtection) {
+    this.advancedProtection = advancedProtection;
+    return this;
+  }
+
+  /**
+   * Get advancedProtection
+   * 
+   * @return advancedProtection
+   */
+
+  @Schema(name = "advancedProtection", example = "false", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  public Boolean getAdvancedProtection() {
+    return advancedProtection;
+  }
+
+  public void setAdvancedProtection(Boolean advancedProtection) {
+    this.advancedProtection = advancedProtection;
+  }
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -71,22 +99,24 @@ public class AccountDetailsResponse {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    AccountDetailsResponse accountDetailsResponse = (AccountDetailsResponse) o;
-    return Objects.equals(this.accountId, accountDetailsResponse.accountId) &&
-        Objects.equals(this.balance, accountDetailsResponse.balance);
+    AccountResponse account = (AccountResponse) o;
+    return Objects.equals(this.accountId, account.accountId) &&
+        Objects.equals(this.balance, account.balance) &&
+        Objects.equals(this.advancedProtection, account.advancedProtection);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(accountId, balance);
+    return Objects.hash(accountId, balance, advancedProtection);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class AccountDetailsResponse {\n");
+    sb.append("class Account {\n");
     sb.append("    accountId: ").append(toIndentedString(accountId)).append("\n");
     sb.append("    balance: ").append(toIndentedString(balance)).append("\n");
+    sb.append("    advancedProtection: ").append(toIndentedString(advancedProtection)).append("\n");
     sb.append("}");
     return sb.toString();
   }
